chore: checkpoint before tooling upgrade

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test:env": "node scripts/test-env.js",
-    "check:env": "node scripts/check-env.js",
-    "setup:env": "node scripts/create-env-file.js",
-    "fix:env": "node scripts/fix-env.mjs",
-    "verify:env": "node scripts/verificar-tudo.js",
+    "env:create": "node scripts/create-env-simple.cjs",
+    "env:test": "node scripts/test-env.cjs",
+    "check:env": "node scripts/check-vite-env.mjs",
+    "setup:env": "node scripts/create-env-file.cjs",
+    "fix:env": "node scripts/fix-env.cjs",
+    "verify:env": "node scripts/verificar-tudo.cjs",
     "test:complete": "node scripts/teste-completo.js",
-    "prepare:dev": "node scripts/verificar-tudo.js && node -e \"const fs=require('fs');const p=require('path');const d=p.join(__dirname,'node_modules/.vite');if(fs.existsSync(d)){fs.rmSync(d,{recursive:true,force:true});console.log('✅ Cache removido');}else{console.log('ℹ️  Cache já limpo');}\"",
-    "restart": "node scripts/fix-env.js && echo. && echo ⚠️  IMPORTANTE: Pare o servidor (Ctrl+C) e execute: npm run dev",
+    "prepare:dev": "node scripts/verificar-tudo.cjs",
+    "restart": "node scripts/fix-env.cjs",
     "frontend:dev": "npm run dev",
     "frontend:build": "npm run build",
     "frontend:preview": "npm run preview -- --host --port 4173",
@@ -24,7 +25,7 @@
     "contracts:compile-and-export": "node scripts/check-contracts.cjs && npm --prefix contracts run compile-and-export || echo Contracts not configured. Run 'npm run contracts:setup' to create contracts folder.",
     "debug:logs": "tsx scripts/debug-logs.ts",
     "test:mint-logs": "tsx scripts/test-mint-logs.ts",
-    "check:arc": "node scripts/check-arc.js"
+    "arc:check": "node scripts/check-arc.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
