fix: walletconnect mobile (deep link)

--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,6 @@ VITE_DEX_PAIR_ADDRESS=0x327f52e7cDfF1567F1708c2D045c7e2963e4889A
 # Use uma carteira com ARC para pagar o gas na Arc Testnet.
 DEPLOYER_PRIVATE_KEY=0x...
 
-# WalletConnect (obrigatório para conectar carteira)
+# WalletConnect — para conexão via QR (desktop) / deep link (mobile)
+# Obtenha em https://cloud.walletconnect.com → New Project → Project ID
 VITE_WALLETCONNECT_PROJECT_ID=
